<resources>
    <string name="app_name">ToDoList</string>
    <string name="DefaultListName">ListName</string>
    <string name="PopupMenuAction_Delete">Delete</string>
    <string name="PopupMenuAction_MoveLeft">Move Left</string>
    <string name="PopupMenuAction_MoveRight">Move Right</string>
    <string name="SortTitle">Сортировать</string>
    <string name="SortType_Default">в моём порядке</string>
    <string name="SortType_Date">по дате</string>
    <string name="SortType_Favourite">недавно в избранном</string>
    <string name="RenameList">Переименовать список</string>
    <string name="DeleteList">Удалить список</string>
    <string name="DeleteComplitedTasks">Удалить выполненные задачи</string>
    <string name="MoreButtonDescription">All Lists button</string>
    <string name="NewButtonDescription">New list button</string>
    <string name="DetailsButtonDescription">List details button</string>
    <string name="CreateList">Создание списка</string>
    <string name="CloseButtonDescription_NewList">Close button for create list fragment</string>
    <string name="Complete">Готово</string>
    <string name="InputListNameHint">Введите название списка</string>
    <string name="NewTaskText">Новая задача</string>
    <string name="NewTaskAdditional">Добавьте дополнительную информацию</string>
    <string name="Save">Сохранить</string>
    <string name="DefaultTaskName">DefaultTaskName</string>
    <string name="Add">Добавить</string>
</resources>