<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragmentListDetails">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:id="@+id/sortButton">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sortTitle"
            android:textColor="@color/black"
            android:text="@string/SortTitle"
            android:layout_gravity="center_vertical|top"
            android:layout_marginTop="6dp"/>

        <TextView
            android:id="@+id/sortType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SortType_Default"
            android:layout_gravity="center_vertical|bottom"
            android:layout_marginBottom="6dp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:id="@+id/renameButton"
        android:layout_gravity="fill"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RenameList"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:id="@+id/deleteListButton"
        android:layout_gravity="fill"
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DeleteList"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:id="@+id/deleteComplitedTasksButton"
        android:layout_gravity="fill"
        android:layout_marginTop="150dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DeleteComplitedTasks"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"/>

    </androidx.cardview.widget.CardView>

</FrameLayout>