<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomPanel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="40dp"
    android:layout_gravity="bottom">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_menu"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:layout_gravity="start"
        android:contentDescription="@string/MoreButtonDescription"
        android:id="@+id/buttonAllLists"
        android:background="?android:attr/selectableItemBackground"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:layout_gravity="center"
        android:contentDescription="@string/NewButtonDescription"
        android:id="@+id/buttonNew"
        android:background="?android:attr/selectableItemBackground"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_more_vertical"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:layout_gravity="end"
        android:contentDescription="@string/DetailsButtonDescription"
        android:id="@+id/buttonDetails"
        android:background="?android:attr/selectableItemBackground"/>

</FrameLayout>